// Javadoc generated with AI assistance - reviewed and approved by author.
package edu.ntnu.idatt2003.millions.observer;

/**
 * Notified after each game-state change.
 */
public interface GameObserver {

    /**
     * Called after each game-state change.
     */
    void onGameUpdated();
}